Eliminar carga del componente Team y ajustar mapeo en el componente Team; eliminar importación del componente Notes en la página de inicio

--- a/src/components/about/Team.astro
+++ b/src/components/about/Team.astro
@@ -153,7 +153,7 @@ const team2 = [
 
             <ul role="list" class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
                 {
-                    team2.map((item, index) => (
+                    team2.map((item) => (
                         <li class="flex min-h-[200px] items-center justify-center rounded-3xl border border-primary-900/10 px-6 py-8 dark:border-primary-300/10">
                             <div class="space-y-6">
                                 <div class="text-center">
