--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,6 +11,6 @@ import Footer from '../components/layout/Footer.astro';
     <Header id="top" />
     <Mission />
     <Values />
-    <Team client:load/>
+    <Team />
     <Footer />
 </Layout>
