--- a/src/components/NewsComponent.astro
+++ b/src/components/NewsComponent.astro
@@ -479,7 +479,7 @@ const publi = [
     <GoBack />
     <div class="mx-auto h-full w-full max-w-2xl px-4 pt-20 sm:px-6 lg:max-w-7xl lg:px-8">
         <Heading
-            title="P"
+            title="Publicaciones"
             subtitle="Noticias sobre arquitectura teatral y escenotecnia respecto a proyectos realizados por Sambataro Arquitectos"
         />
         <div class="mx-auto px-4 py-8">
