--- a/src/components/NewsComponent.astro
+++ b/src/components/NewsComponent.astro
@@ -486,8 +486,7 @@ const publi = [
             <ul role="list" class="grid grid-cols-2 gap-2 lg:grid-cols-4">
                 {
                     publi.map((item, index) => (
-                        <li
-                            key={index}
+                        <li                            
                             class="rounded-3xl  border border-primary-900/10 p-2 dark:border-primary-300/10 ">
                             <div class="flex h-full flex-col justify-start">
                                 {item.images?.[0] && (
@@ -533,9 +532,8 @@ const publi = [
                                         </button>
                                         <div class="flex h-full  flex-col items-center overflow-y-auto p-4">
                                             <div class="grid w-full grid-cols-2  place-items-center items-center gap-2 lg:grid-cols-3">
-                                                {item.images?.map((image, index) => (
-                                                    <img
-                                                        key={index}
+                                                {item.images?.map((image) => (
+                                                    <img                                        
                                                         class="mx-auto h-[200px] w-full rounded-2xl object-cover lg:h-[300px] "
                                                         src={image}
                                                         alt={image}
