Eliminar carga del componente NewsComponent y optimizar el mapeo de notas en PublicationsComponent

--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -17,7 +17,7 @@ import Layout from '../layouts/Layout.astro';
                 title="Publicaciones"
                 subtitle="Publicaciones sobre arquitectura teatral y escenotecnia respecto a proyectos realizados por Sambataro Arquitectos"
             />
-            <PublicationsComponent client:load />
+            <PublicationsComponent />
         </div>
         <Footer />
     </Base>
