--- a/src/components/PublicationsComponent.astro
+++ b/src/components/PublicationsComponent.astro
@@ -95,7 +95,7 @@ const notes = [
             <div class="flex flex-col gap-12 sm:gap-16">
                 <ul role="list" class="grid gap-8 lg:grid-cols-3">
                     {
-                        notes.map((item, index) => (
+                        notes.map((item) => (
                             <li class="rounded-3xl  border border-primary-900/10 p-2 dark:border-primary-300/10 ">
                                 <div class="flex h-full flex-col justify-start">
                                     {item.images?.[0] && (
