Eliminar carga del componente IndexNewsComponent y IndexPublicationsComponent en la página de inicio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,12 +28,12 @@ const texts = [
         title="Noticias"
         subtitle="Noticias sobre arquitectura teatral y escenotecnia respecto a proyectos realizados por Sambataro Arquitectos"
     />
-    <IndexNewsComponent client:load />
+    <IndexNewsComponent />
     <Heading
         title="Publicaciones"
         subtitle="Publicaciones sobre arquitectura teatral y escenotecnia respecto a proyectos realizados por Sambataro Arquitectos"
     />
-    <IndexPublicationsComponent client:load />
+    <IndexPublicationsComponent />
     <!-- <Expertise /> -->
     <!-- <Testimonials /> -->
     <Cta />
