--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,12 +28,14 @@ const texts = [
         title="Noticias"
         subtitle="Noticias sobre arquitectura teatral y escenotecnia respecto a proyectos realizados por Sambataro Arquitectos"
     />
-    <IndexNewsComponent />
+    <!-- <IndexNewsComponent /> -->
     <Heading
         title="Publicaciones"
         subtitle="Publicaciones sobre arquitectura teatral y escenotecnia respecto a proyectos realizados por Sambataro Arquitectos"
     />
-    <IndexPublicationsComponent />
+    <!-- <IndexPublicationsComponent /> -->
+
+    
     <!-- <Expertise /> -->
     <!-- <Testimonials /> -->
     <Cta />
