Restaurar carga de componentes IndexNewsComponent e IndexPublicationsComponent en la página de inicio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,14 +28,12 @@ const texts = [
         title="Noticias"
         subtitle="Noticias sobre arquitectura teatral y escenotecnia respecto a proyectos realizados por Sambataro Arquitectos"
     />
-    <!-- <IndexNewsComponent /> -->
+    <IndexNewsComponent />
     <Heading
         title="Publicaciones"
         subtitle="Publicaciones sobre arquitectura teatral y escenotecnia respecto a proyectos realizados por Sambataro Arquitectos"
     />
-    <!-- <IndexPublicationsComponent /> -->
-
-    
+    <IndexPublicationsComponent />
     <!-- <Expertise /> -->
     <!-- <Testimonials /> -->
     <Cta />
