Actualizar imagen del componente Mission con una nueva referencia de teatro

--- a/src/components/about/Mission.astro
+++ b/src/components/about/Mission.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets';
 import Heading from '../../components/about/Heading.astro';
-import orquesta from '../../img/orquesta.webp';
+import theater from '../../img/projects/argentino/argentino2.webp';
 const stats = [
     {
         name: 'Years',
@@ -30,7 +30,7 @@ const stats = [
             <div>
                 <Image
                     class="mx-auto w-full max-w-xl rounded-3xl object-cover"
-                    src={orquesta}
+                    src={theater}
                     alt="Our experts working together"
                 />
                 <h2 class="py-8 text-3xl font-medium tracking-tight sm:text-4xl">Estudio</h2>
