Agregar nuevas imágenes para los proyectos Arena, Ballet, Superior y Municipal

--- a/src/components/about/Team.astro
+++ b/src/components/about/Team.astro
@@ -133,7 +133,7 @@ const team2 = [
                                             <p class="text-base font-semibold text-primary-950/70 dark:text-primary-100/70">
                                                 {item.job}
                                             </p>
-                                            <p class="text-balance text-pretty px-4 lg:px-8 text-xs text-primary-950/70 dark:text-primary-200/70 lg:text-sm">
+                                            <p class="text-pretty text-pretty px-4 lg:px-8 text-xs text-primary-950/70 dark:text-primary-200/70 lg:text-base">
                                                 {item.full_description}
                                             </p>
                                             <a
