--- a/src/components/IndexNewsComponent.astro
+++ b/src/components/IndexNewsComponent.astro
@@ -22,17 +22,16 @@ const notes = [
 
 <Base>
     <section class="py-16 sm:py-20">
-        <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+        <div class="mx-auto max-w-xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
             <div class="flex flex-col gap-12 sm:gap-16">
                 <ul role="list" class="grid gap-8 lg:grid-cols-3">
                     {
                         notes.map((item, index) => (
-                            <li
-                                class="rounded-3xl  border border-primary-900/10 p-2 dark:border-primary-300/10 ">
+                            <li class="rounded-xl bg-primary-200/50 p-2 shadow-md  dark:bg-primary-900">
                                 <div class="flex h-full flex-col justify-start">
                                     {item.images?.[0] && (
                                         <img
-                                            class="mx-auto h-[300px] w-full rounded-2xl object-cover"
+                                            class="mx-auto h-[300px] w-full rounded-md object-cover"
                                             src={item.images[0]}
                                             alt={item.title}
                                         />
@@ -48,7 +47,7 @@ const notes = [
                                     </div>
                                     <button
                                         onclick="location.href='/news'"
-                                        class="flex items-center justify-center w-full rounded-3xl border border-primary-900/10 px-4 py-2 transition hover:bg-primary-200 dark:border-primary-300/10 hover:dark:bg-primary-900/10"
+                                        class="dark:hover-bg-primary-700 flex w-full items-center justify-center rounded-xl bg-primary-100 px-6 py-4 text-sm font-normal text-primary-700 shadow transition-all hover:text-primary-800 hover:shadow-md focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-1 focus-visible:outline-primary-500 active:scale-95 dark:border-primary-700 dark:bg-primary-800 dark:text-primary-200 dark:hover:bg-primary-700 dark:hover:text-primary-100 dark:focus-visible:outline-primary-400"
                                         data-index={index}>
                                         Leer más
                                     </button>
