--- a/src/components/IndexPublicationsComponent.astro
+++ b/src/components/IndexPublicationsComponent.astro
@@ -30,11 +30,11 @@ const notes = [
                 <ul role="list" class="grid gap-8 lg:grid-cols-3">
                     {
                         notes.map((item, index) => (
-                            <li class="rounded-3xl  border border-primary-900/10 p-2 dark:border-primary-300/10 ">
+                            <li class="rounded-xl   bg-primary-200/50 p-2 shadow-md  dark:bg-primary-900">
                                 <div class="flex h-full flex-col justify-start">
                                     {item.images?.[0] && (
                                         <img
-                                            class="mx-auto h-[350px] w-full rounded-2xl bg-transparent object-cover"
+                                            class="mx-auto h-[350px] w-full rounded-md bg-transparent object-cover"
                                             src={item.images[0]}
                                             alt={item.title}
                                         />
@@ -48,7 +48,7 @@ const notes = [
                                     </div>
                                     <a
                                         href="/publications"
-                                        class="flex w-full items-center justify-center rounded-3xl border border-primary-900/10 px-4 py-2 transition hover:bg-primary-200 dark:border-primary-300/10 hover:dark:bg-primary-900/10"
+                                        class="dark:hover-bg-primary-700 flex w-full items-center justify-center rounded-xl bg-primary-100 px-6 py-4 text-sm font-normal text-primary-700 shadow transition-all hover:text-primary-800 hover:shadow-md focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-1 focus-visible:outline-primary-500 active:scale-95 dark:border-primary-700 dark:bg-primary-800 dark:text-primary-200 dark:hover:bg-primary-700 dark:hover:text-primary-100 dark:focus-visible:outline-primary-400"
                                         data-index={index}>
                                         Leer más
                                     </a>
