--- a/src/components/home/Cta.astro
+++ b/src/components/home/Cta.astro
@@ -1,23 +1,21 @@
 <section class="py-16 sm:py-20">
-  <div class="mx-auto max-w-2xl px-4 text-center sm:px-6 lg:max-w-7xl lg:px-8">
-    <div
-      class="bg-primary-500/10 dark:bg-primary-400/10 flex flex-col items-center gap-8 rounded-3xl px-5 py-16 sm:gap-10"
-    >
-      <div class="flex flex-col gap-4 sm:gap-6">
-        <h2 class="mx-auto max-w-sm text-3xl font-medium tracking-tight sm:text-4xl">
-          Construyendo el futuro
-        </h2>
-        <p class="text-primary-950/70 dark:text-primary-200/70 mx-auto max-w-2xl text-lg">
-          En Sambataro Arquitectos estamos comprometidos con la calidad y la innovación en cada uno de nuestros proyectos.
-
-        </p>
-      </div>
-      <a
-        href="/contact"
-        class="bg-primary-600 dark:bg-primary-400 hover:bg-primary-700 dark:hover:bg-primary-300 focus-visible:outline-primary-600 dark:focus-visible:outline-primary-400 dark:text-primary-950 inline-flex items-center justify-center rounded-full border border-transparent px-5 py-3 text-base font-medium text-white transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2"
-      >
-        Contactanos
-      </a>
+    <div class="mx-auto max-w-2xl px-4 text-center sm:px-6 lg:max-w-7xl lg:px-8">
+        <div
+            class="flex flex-col items-center gap-8 rounded-xl bg-primary-200/50 p-2 px-5 py-16 shadow-md dark:bg-primary-900 sm:gap-10">
+            <div class="flex flex-col gap-4 sm:gap-6">
+                <h2 class="mx-auto max-w-sm text-3xl font-medium tracking-tight sm:text-4xl">
+                    Construyendo el futuro
+                </h2>
+                <p class="mx-auto max-w-2xl text-lg text-primary-950/70 dark:text-primary-200/70">
+                    En Sambataro Arquitectos estamos comprometidos con la calidad y la innovación en
+                    cada uno de nuestros proyectos.
+                </p>
+            </div>
+            <a
+                href="/contact"
+                class="inline-flex items-center justify-center rounded-full border border-transparent bg-primary-600 px-5 py-3 text-base font-medium text-white transition hover:bg-primary-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600 dark:bg-primary-400 dark:text-primary-950 dark:hover:bg-primary-300 dark:focus-visible:outline-primary-400">
+                Contactanos
+            </a>
+        </div>
     </div>
-  </div>
 </section>
