--- a/src/components/contact/ContactInfo.astro
+++ b/src/components/contact/ContactInfo.astro
@@ -6,7 +6,8 @@
     <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
         <dl class="grid gap-6 lg:grid-cols-3">
             <!-- Address -->
-            <div class="rounded-3xl bg-primary-500/10 px-6 py-8 dark:bg-primary-400/10">
+            <div
+                class="rounded-xl border border-primary-900/10 bg-primary-200/50 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-400/10 dark:bg-primary-900">
                 <dt class="sr-only">Domicilio</dt>
                 <dd class="flex h-full flex-col justify-start gap-12">
                     <svg
@@ -23,7 +24,7 @@
                         <p>Av. Congreso 2676 C.A.B.A., CP 1428</p>
                         <p>Santiago, Chile</p>
                     </div>
-                   
+
                     <div class="text-base font-medium">
                         <p>José Victorino Lastarria 70 Santiago, CP 8320152</p>
                         <p>Buenos Aires, Argentina</p>
@@ -32,7 +33,8 @@
             </div>
 
             <!-- Phone number -->
-            <div class="rounded-3xl bg-primary-500/10 px-6 py-8 dark:bg-primary-400/10">
+            <div
+                class="rounded-xl border border-primary-900/10 bg-primary-200/50 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-400/10 dark:bg-primary-900">
                 <dt class="sr-only">Teléfono</dt>
                 <dd class="flex h-full flex-col justify-start gap-12">
                     <svg
@@ -57,7 +59,8 @@
             </div>
 
             <!-- Email -->
-            <div class="rounded-3xl bg-primary-500/10 px-6 py-8 dark:bg-primary-400/10">
+            <div
+                class="rounded-xl border border-primary-900/10 bg-primary-200/50 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-400/10 dark:bg-primary-900">
                 <dt class="sr-only">Email</dt>
                 <dd class="flex h-full flex-col justify-start gap-12">
                     <svg
