--- a/src/pages/service.astro
+++ b/src/pages/service.astro
@@ -143,7 +143,7 @@ const contenidos = contenido.find((item) => item.tema === 'Asesoría Escenotécn
             </div>
             <div class="grid gap-12 py-12 lg:grid-cols-2">
                 <div
-                    class="flex flex-col gap-4 rounded-3xl bg-primary-500/10 p-4 dark:bg-primary-400/10 lg:p-12">
+                    class="flex flex-col gap-4 rounded-xl border border-primary-900/10 bg-primary-200/50 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-900 lg:p-12">
                     <h2 class="text-2xl font-bold lg:text-4xl">{tema1}</h2>
                     <p
                         class="pb-6 text-base leading-normal text-primary-950/70 dark:text-primary-200/70 sm:text-base">
@@ -163,7 +163,7 @@ const contenidos = contenido.find((item) => item.tema === 'Asesoría Escenotécn
                 </div>
 
                 <div
-                    class="flex flex-col gap-4 rounded-3xl bg-primary-500/10 p-4 dark:bg-primary-400/10 lg:p-12">
+                    class="flex flex-col gap-4 rounded-xl border border-primary-900/10 bg-primary-200/50 p-4 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-900 lg:p-12">
                     <h2 class="text-2xl font-bold lg:text-4xl">{tema2}</h2>
                     <p
                         class="pb-6 text-base leading-normal text-primary-950/70 dark:text-primary-200/70 sm:text-base">
@@ -184,7 +184,7 @@ const contenidos = contenido.find((item) => item.tema === 'Asesoría Escenotécn
             </div>
             <div class="grid gap-12 lg:grid-cols-2">
                 <div
-                    class="flex flex-col items-start justify-start rounded-3xl bg-primary-500/10 p-4 dark:bg-primary-400/10 lg:p-12">
+                    class="justify-startrounded-xl flex flex-col items-start rounded-xl border border-primary-900/10 bg-primary-200/50 p-4 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-900 lg:p-12">
                     <h2 class="text-2xl font-bold lg:text-4xl">{tema3}</h2>
                     <p
                         class="text-balance !max-w-[50ch] pb-6 text-base leading-normal text-primary-950/70 dark:text-primary-200/70 sm:text-base">
